# tardigrade-cs

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/: faq.json
gateway-config/: README.md  tardigrade_chaos_cascade.yaml  tardigrade_chaos_primary.yaml  tardigrade_chaos_ratelimit.yaml  tardigrade_openai_account.yaml  tardigrade_primary.yaml
src/tardigrade/: __init__.py  app.py  chaos.py  cli.py  config.py  guardrails.py  mcp_client.py  mcp_server.py
src/tardigrade/tiers/: __init__.py  agent.py  embeddings.py  rules.py  types.py
tests/: test_smoke.py
web/: index.html
