[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tardigrade-cs"
version = "0.1.0"
description = "Customer-service agent that survives provider, tool, and model failures. LLM → embeddings → rules waterfall over TrueFoundry AI Gateway + MCP Gateway + Guardrails on AWS Bedrock."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "TardigradeCS" }]
keywords = ["customer-service", "agent", "resilience", "truefoundry", "bedrock", "mcp", "fallback"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "sse-starlette>=2.1.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
tardigrade = "tardigrade.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tardigrade"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
